--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -15,49 +15,91 @@
 </head>
 
   <body>
+  <header>
+    <nav>
+      <a href="">Services</a>
+      <a href="">Product</a>
+      <a href="">Vision</a>
+      <a href="">Features</a>
+      <a href="">About</a>
+      <a href="">Contact</a>
+      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+    </nav>
 
-  Services
-  Product
-  Vision
-  Features
-  About
-  Contact
+    <div class="ino-container">
 
-  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  Innovation
-  On
-  Demand
+      <div>
+        <h1>
+          Innovation<br>
+          On<br>
+          Demand
+        </h1>
+      </div>
 
-  Get Started
+      <div class="started-button">
+          <span>Get Started</span>
+      </div>
 
-  <img src="img/header-img.png" alt="Image of a code snippet.">
+    </div>
+  <img class="headerImage" src="img/header-img.png" alt="Image of a code snippet.">
+</header>
 
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+<secion class="toptext">
+  <div class="features">
+    <h2>Features</h2>
+    <p>
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </p> 
+  </div>
 
-
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <div class="about">
+    <h2>About</h2>
+    <p>
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo,<br> at imperdiet metus scelerisque quis.
+    </p>
+  </div>  
+</secion>
 
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
   
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 
+<section class="bottomtext">
+<div class="services">
+    <h2>Services</h2> 
+    <p>
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </p>
+</div>
 
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+<div class="products">
+  <h2>Product</h2>
+    
+  <p>
+    Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  </p>
+</div>
+<div class="Vision">
+<h2>Vision</h2>
+  
+<p>
+    Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+</p>
 
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-  Contact
-  123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
-  sales@greatidea.io
-
-  Copyright Great Idea! 2018
+</div>
+</section>
+<footer>
+  <address>
+      <h2>Contact</h2><br>
+      123 Way 456 Street<br>
+      Somewhere, USA<br>
+      <br>
+      1 (888) 888-8888<br>
+      <br>
+      sales@greatidea.io<br>
+  </address>
+    <p>Copyright Great Idea! 2018</p>
+</footer>  
+  
   
   </body>
 </html>
